syntax = "proto3";
package services;

import "google/protobuf/empty.proto";

option go_package = "github.com/noobyscoob/map-reduce/services";

message RunMapInput {
    int32 taskId = 1;
    string fn = 2;
    int32 nReducers = 3;
    string fileName = 4;
    bytes fileData = 5;
}

message InitReduceInput {
    repeated string ports = 1;
}

message KeyValue {
    string key = 1;
    string value = 2;
}

message KvPairs {
    repeated KeyValue data = 1;
}

service MapperService {
    rpc RunMap(RunMapInput) returns (google.protobuf.Empty) {}
    rpc InitReduce(InitReduceInput) returns (google.protobuf.Empty) {}
}
